@@ -38,7 +38,7 @@ PROJECT_NUMBER         =
 # If a relative path is entered, it will be relative to the location 
 # where doxygen was started. If left blank the current directory will be used.
 
-OUTPUT_DIRECTORY       = doc/
+OUTPUT_DIRECTORY       = doc/doxygen
 
 # If the CREATE_SUBDIRS tag is set to YES, then doxygen will create 
 # 4096 sub-directories (in 2 levels) under the output directory of each output 
@@ -691,7 +691,7 @@ HTML_FOOTER            = doc/doxygen_footerFile.html
 
 #HTML_STYLESHEET        = 
 # Not used yet, because it looks odd.
-#HTML_STYLESHEET        = doc/doxygen_styleSheetFile.css
+HTML_STYLESHEET        = doc/doxygen.css
 
 # If the HTML_ALIGN_MEMBERS tag is set to YES, the members of classes, 
 # files or namespaces will be aligned in HTML using tables. If set to 
