@@ -1,0 +1,38 @@
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head><title>Gavare's eXperimental Emulator:&nbsp;&nbsp;&nbsp;Documentation</title>
+<meta name="robots" content="noarchive,nofollow,noindex"></head>
+<body bgcolor="#f8f8f8" text="#000000" link="#4040f0" vlink="#404040" alink="#ff0000">
+<table border=0 width=100% bgcolor="#d0d0d0"><tr>
+<td width=100% align=center valign=center><table border=0 width=100%><tr>
+<td align="left" valign=center bgcolor="#d0efff"><font color="#6060e0" size="6">
+<b>GXemul:</b></font>&nbsp;&nbsp;<font color="#000000" size="6"><b>Documentation</b>
+</font></td></tr></table></td></tr></table><p>
+
+<!--  $Id: index.html,v 1.285 2007-12-17 13:43:01 debug Exp $  -->
+
+<h2>GXemul 0.5.0</h2>
+
+<p><i>Copyright (C) 2003-2007  Anders Gavare</i>
+
+
+<p><br>GXemul is an experimental framework for full-system emulation.
+GXemul 0.5.0 is a complete rewrite of GXemul in C++. Previous versions
+were written in plain C.
+
+<p><br>The following documentation sections are available:
+
+<ul>
+	<li><a href="doxygen/html/index.html">Developer documentation (source
+		code reference)</a>
+</ul>
+
+
+<p><br>GXemul's homepage is
+<a href="http://gavare.se/gxemul/">http://gavare.se/gxemul/</a>.
+
+<p>If you have found GXemul useful in some way, or feel like sending me 
+comments or feedback in general, then mail me at&nbsp;&nbsp;<tt>anders <i>(at)</i> gavare.se</tt>.
+
+
+</body>
+</html>
